bug: prevent profile overflow for long text with no spaces

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -41,6 +41,7 @@
 }
 
 .profile-messages {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
